--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -7,14 +7,22 @@
 	<header th:replace="layout/layout :: header"></header>
 
 	<div class="container py-4">
+		
 		<div class="card bg-light">
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
-				<img th:if="${#strings.length(cliente.foto) > 0 }" class="img-thumbnail rounded float-left"
+
+				<h4 class="card-title">
+					<a class="btn btn-primary btn-xs" th:href="@{'/factura/form/' + ${cliente.id}}"
+						th:text="'crear factura'"></a>
+				</h4>
+
+				<img th:if="${#strings.length(cliente.foto) > 0 }" 
+				class="img-thumbnail rounded float-left"
 					style="max-width: 25%;" th:src="@{'/uploads/' + ${cliente.foto}}" th:alt="${cliente.foto}" />
 
-				<ul class="list-grouop">
-					<li class="list-group-item" th:text="${cliente.nombre}"></li>
+				<ul class="list-group">
+					<li class="list-group-item active" th:text="${cliente.nombre}"></li>
 					<li class="list-group-item" th:text="${cliente.apellido}"></li>
 					<li class="list-group-item" th:text="${cliente.email}"></li>
 					<li class="list-group-item" th:text="${cliente.createAt}"></li>
