--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<title th:text=" 'Spring Boot: MVC + Thymeleaf + Data JPA - ' + ${titulo}"></title>
 	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/jquery.ui.min.css}" />
 	
 	<!--
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -58,6 +59,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 			crossorigin="anonymous"></script>
+		<script th:src="@{/js/jquery.ui.min.css}"></script>
 	</footer>
 </body>
 
